Fix weather icon temperature spacing

--- a/frontend/static/css/media_editor.css
+++ b/frontend/static/css/media_editor.css
@@ -6148,16 +6148,16 @@ details.collapsible:not([open]) .birthday-text-footer {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 0.32rem;
+  gap: 0.68rem;
   white-space: nowrap;
 }
 
 .forecast-period-icon {
   display: inline-grid;
   place-items: center;
-  width: 1em;
+  width: 1.35em;
   height: 1em;
-  flex: 0 0 1em;
+  flex: 0 0 1.35em;
   font-size: var(--weather-preview-forecast-icon-size, 1.5rem);
   line-height: 1;
   vertical-align: middle;
@@ -6167,7 +6167,7 @@ details.collapsible:not([open]) .birthday-text-footer {
   position: relative;
   display: inline-grid;
   place-items: center;
-  width: 1em;
+  width: 1.35em;
   height: 1em;
   overflow: hidden;
 }
@@ -6178,7 +6178,7 @@ details.collapsible:not([open]) .birthday-text-footer {
 
 .weather-layered-overlay {
   position: absolute;
-  right: 0;
+  right: 0.04em;
   bottom: 0;
   font-size: 0.6em;
   line-height: 1;
