--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -3249,16 +3249,16 @@ input[type="datetime-local"]:focus {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 0.32rem;
+  gap: 0.68rem;
   white-space: nowrap;
 }
 
 .weather-slide-overlay .forecast-period-icon {
   display: inline-grid;
   place-items: center;
-  width: 1em;
+  width: 1.35em;
   height: 1em;
-  flex: 0 0 1em;
+  flex: 0 0 1.35em;
   font-size: var(--weather-slide-forecast-icon-size, 35px);
   line-height: 1;
   vertical-align: middle;
@@ -3268,7 +3268,7 @@ input[type="datetime-local"]:focus {
   position: relative;
   display: inline-grid;
   place-items: center;
-  width: 1em;
+  width: 1.35em;
   height: 1em;
   overflow: hidden;
 }
@@ -3279,7 +3279,7 @@ input[type="datetime-local"]:focus {
 
 .weather-slide-overlay .weather-layered-overlay {
   position: absolute;
-  right: 0;
+  right: 0.04em;
   bottom: 0;
   font-size: 0.6em;
   line-height: 1;
